<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="page_title">Eletric Car</string>
    <string name="cars">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="price">Preço</string>
    <string name="battery">Bateria</string>
    <string name="power">Potência</string>
    <string name="preco_kwh">Preço Kw/h</string>
    <string name="run_km">Km Percorrido</string>
    <string name="calculate">Calcular</string>
    <string name="connectionUnavailable">Ops, conexão não disponível</string>
    <string name="retry_text">Tentar novamente</string>
    <string name="response_error">Algo deu errado, por favor, tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
</resources>
